syntax = "proto2";
package douyin.core;
option go_package="../;pb";
message douyin_user_request {
  //用户id
  required int64 user_id = 1;
  //用户鉴权token
  required string token = 2;
}
message douyin_user_response {
  //状态码，o-成功，其他值-失败
  required int32 status_code = 1;
  //返回状态描述
  optional string status_msg = 2;
  //用户信息
  required User user = 3;
}
message User {
  //用户id
  required int64 id = 1;
  //用户名称
  required string name = 2;
  //关注总数
  optional int64 follow_count = 3;
  //粉丝总数
  optional int64 follower_count = 4;
  //true-已关注，false-未关注
  required bool is_follow = 5;
}
service UserInf{
  rpc douyin_user_request(User)returns(douyin_user_response){}
}